Get Users (Admin)Service Tests Refactoring #153